# WrapperDetect

./: CMakeLists.txt  ReadMe.md
include/LLMQuery/: LLMAnalyzer.h
include/Passes/: IterativeModulePass.h
include/Passes/AllocWrapperDetect/Debug/: DebugPass.h
include/Passes/AllocWrapperDetect/Heuristic/: AWDPass.h  BUAWDPass.h  EHAWDPass.h  HAWDPass.h  KMeldPass.h
include/Passes/AllocWrapperDetect/LLM/: IntraAWDPass.h
include/Passes/CallGraph/: CallGraphPass.h  CppCGPass.h  FLTAPass.h  KELPPass.h  MLTADFPass.h  MLTAPass.h
include/Utils/Basic/: Config.h  Options.h  SourceCodeInfo.h  Tarjan.h  TypeDecls.h
include/Utils/Tool/: Common.h  CppUtil.h  GlobalContext.h  Http.h
lib/: CMakeLists.txt
lib/LLMQuery/: LLMAnalyzer.cpp
lib/Passes/: IterativeModulePass.cpp
lib/Passes/AllocWrapperDetect/Debug/: DebugPass.cpp
lib/Passes/AllocWrapperDetect/Heuristic/: AWDPass.cpp  BUAWDPass.cpp  EHAWDPass.cpp  HAWDPass.cpp  KMeldPass.cpp
lib/Passes/AllocWrapperDetect/LLM/: IntraAWDPass.cpp
lib/Passes/CallGraph/: CallGraphPass.cpp  CppCGPass.cpp  FLTAPass.cpp  KELPPass.cpp  MLTADFPass.cpp  MLTAPass.cpp  MLTAPassUtil.cpp
lib/Utils/: Common.cpp  Config.cpp  CppUti.cpp  CppUtil.cpp  Http.cpp  Options.cpp  SourceCodeInfo.cpp  Tarjan.cpp
resources/: llama_templates.json  templates.json
tools/: CMakeLists.txt  Debug.cpp  KMeld.cpp  LAWD.cpp  SAWD.cpp
